labs/ingress-lab-05/ingress-lab-05-clean/manifests/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-web
  namespace: ingress-lab-05
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure-web
  template:
    metadata:
      labels:
        app: secure-web
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          command:
            - /bin/sh
            - -c
          args:
            - |
              echo "secure web pod: $HOSTNAME" > /usr/share/nginx/html/index.html
              nginx -g 'daemon off;'
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
