labs/ingress-lab-05/ingress-lab-05-clean/manifests/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-web-service
  namespace: ingress-lab-05
spec:
  selector:
    app: secure-web
  ports:
    - name: http
      port: 80
      targetPort: http
